# adventofcode

./: pyproject.toml  readme.me
day 1/: 01.py
day 2/: 02_1.py  02_2.py
day 3/: 03.py
day 4/: 04.py
day 5/: 05.py
day 6/: day6.py
day 7/: 07-test-input.txt  07.py
